# wiiuse

./: CMakeLists.txt
example/: example.c
src/: dynamics.c  dynamics.h  events.c  io.c  motion_plus.c  nunchuk.c  wiiuse.h
wiiuse_simple/: CMakeLists.txt  wiiuse_simple.c  wiiuse_simple.h
wiiuse_simple_example/: CMakeLists.txt  wiiuse_simple_example.c
